test/spec_vectors/br_on_cast_fail/fail/module_5.wat
(module (type $t (struct)) (func (param (ref null any)) (result (ref any)) (block (result (ref $t)) (br_on_cast_fail 1 (ref null any) (ref $t) (local.get 0)))))